# Tic_tac_toe

./: .gitignore  CMakeLists.txt
Includes/IO/: AIOFactory.class.hpp  AInputOutput.class.hpp  ConsoleIO.class.hpp  ncursesIO.class.hpp
Includes/Input/: AInput.class.hpp
Includes/Main/: AI.class.hpp  AView.class.hpp  Database.class.hpp  Defines.hpp  Engine.class.hpp  GameView.class.hpp
Includes/Output/: AOutput.class.hpp
Includes/Views/: AView.class.hpp  ChengeOutputModeView.class.hpp  GameMenuView.class.hpp  GameOverView.class.hpp  GameView.class.hpp  StartMenuView.class.hpp
Sources/IO/: AInputOutput.class.Coplien.cpp
Sources/IO/AIOFactory/: AIOFactory.class.Coplien.cpp  AIOFactory.class.cpp
Sources/IO/ConsoleIO/: ConsoleIO.class.Base.cpp  ConsoleIO.class.Coplien.cpp  ConsoleIO.class.Display.cpp
Sources/IO/ncursesIO/: ncursesIO.class.Base.cpp  ncursesIO.class.Coplien.cpp  ncursesIO.class.Display.cpp
Sources/Main/: AI.class.Base.cpp  Database.class.Base.cpp  Database.class.Coplien.cpp  Engine.class.Base.cpp  Engine.class.CheckWin.cpp  Engine.class.Coplien.cpp  GameView.class.cpp  main.cpp
Sources/Views/: ChangeOutputModeView.class.cpp  GameMenuView.class.cpp  GameOverView.class.cpp  GameView.class.cpp  StartMenuView.class.cpp
